--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div>
           <p><small>Giving the AI our Knowledge is our ulterior motive. And we are working towards that. Are you an AI enthusiast? If so, don't forget to subscribe for the updates and if you are interested in contributing, hurry now and get in touch with us by clicking on the contribute button. We'll be happy to get back to you. Stay Tuned!</small></p>
         </div>
-        <button type="button">subscribe</button> 
-        <button type="button">contribute</button> 
+        <button type="button" onclick="window.open('https://goo.gl/forms/fugbD4eidUgIpSLH2','_blank')" target="_blank">subscribe</button> 
+        <button type="button" onclick="window.open('https://goo.gl/forms/g558YSPPf9MGUCT63','_blank')" target="_blank">contribute</button> 
     </div>
   </div>
 </div>
